syntax = "proto3";

package avgAPI;

service ComputeAverage{
    rpc ComputeAverage(AverageRequest) returns (AverageResponse){}
}

message AverageRequest{
    repeated int32 numbers = 1;
}

message AverageResponse{
    float result = 1;
}